# space-twex

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/common/: config.py  sockets.py
backend/app/twex/: twex_db.py  twex_sio.py
backend/siox/: emitters.py  exceptions.py  markers.py  packager.py  packagers.py  parsers.py  request.py  results.py  routing.py  socket.py  types.py
backend/tests/: conftest.py  test_basic.py  testing.py
backend/tests/functional/: conftest.py  test_confirmation.py  test_creation.py  test_finishing.py  test_sending.py  test_subscribing.py
backend/tests/integrational/: test_main_flow.py
